logs/main.log
Traceback (most recent call last):
  File "C:/Users/j.turnbull/PycharmProjects/SentimentApp/main.py", line 6, in <module>
    import populateDatabase as populateDB
  File "C:\Users\j.turnbull\PycharmProjects\SentimentApp\populateDatabase.py", line 12, in <module>
    import databaseQueries as dbQuery
  File "C:\Users\j.turnbull\PycharmProjects\SentimentApp\databaseQueries.py", line 15, in <module>
    django.setup()
  File "C:\Users\j.turnbull\PycharmProjects\SentimentApp\venv\lib\site-packages\django\__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "C:\Users\j.turnbull\PycharmProjects\SentimentApp\venv\lib\site-packages\django\apps\registry.py", line 114, in populate
    app_config.import_models()
  File "C:\Users\j.turnbull\PycharmProjects\SentimentApp\venv\lib\site-packages\django\apps\config.py", line 211, in import_models
    self.models_module = import_module(models_module_name)
  File "C:\Users\j.turnbull\AppData\Local\Programs\Python\Python37\lib\importlib\__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\\Users\j.turnbull\PycharmProjects\SentimentApp\SentimentApp\tracker\models.py", line 33
    :
    ^
SyntaxError: invalid syntax
